# python-plugins

./: .gitignore  CMakeLists.txt  LICENSE  README.rst  pdal-driver-path.txt  pyproject.toml  setup.py
.github/: environment.yml
.github/workflows/: build.yml  release.yml
pdal/filters/: PythonFilter.cpp
pdal/io/: NumpyReader.cpp
pdal/plang/: Environment.cpp  Environment.hpp  Script.cpp  gil.hpp
pdal/test/temp/: crop-wkt-2d-classification.las  out2.las
src/pdal/filters/: PythonFilter.cpp  export.hpp
src/pdal/io/: NumpyReader.cpp  NumpyReader.hpp
src/pdal/plang/: Environment.cpp  Environment.hpp  Invocation.cpp  Invocation.hpp  Redirector.cpp  Script.hpp  gil.hpp
src/pdal/test/: NumpyReaderTest.cpp  PythonFilterTest.cpp  TestConfig.hpp
src/pdal/test/data/: 1.2-with-color.npy
src/pdal/test/data/pipeline/: crop_wkt_2d_classification.json  from-module.json  predicate-embed.json  predicate-keep-ground-and-unclass.json  predicate-keep-last-return.json  predicate-keep-specified-returns.json  programmable-update-y-dims.json  reproject.json
src/pdal/test/gtest/cmake/: internal_utils.cmake
