[project]
name = "pdal-plugins"
description = "Point cloud data processing Python plugins"
readme = "README.rst"
requires-python = ">=3.9"
license = {file = "LICENSE"}
keywords = ["point", "cloud", "spatial"]
authors = [
  {email = "howard@hobu.co"},
  {name = "Howard Butler"}
]
maintainers = [
  {name = "Howard Butler", email = "howard@hobu.co"}
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: GIS",
]

dependencies = [
  "numpy"
]

#dynamic = ["version"]

#[tool.scikit-build.dynamic]
#version = { attr = "pdal.__version__" }
version="1.4.0"

[project.optional-dependencies]
test = [
]

[tool.setuptools]
package-dir = {"" =  "src"}
zip-safe = false

[project.urls]
homepage = "https://pdal.io"
documentation = "https://pdal.io"
repository = "https://github.com/PDAL/python-plugins"
changelog = "https://github.com/PDAL/python-plugins/blob/main/README.rst"

[build-system]
requires = ["scikit-build-core", "numpy",  "pybind11[global]"]
build-backend = "scikit_build_core.build"


[tool.scikit-build]
build-dir = "build/{wheel_tag}"
sdist.exclude = [".github"]
sdist.cmake = true
cmake.build-type = "RelWithDebugInfo"
sdist.include = [
  "src",
  "CMakeLists.txt"
]
cmake.verbose = false
logging.level = "ERROR"

#[tool.scikit-build.cmake.define]
#WITH_TESTS = "ON"
