[project]
name = "pdal-plugins"
description = "Point cloud data processing Python plugins"
readme = "README.rst"
requires-python = ">=3.9"
license = {file = "LICENSE"}
keywords = ["point", "cloud", "spatial"]
authors = [
  {email = "howard@hobu.co"},
  {name = "Howard Butler"}
]
maintainers = [
  {name = "Howard Butler", email = "howard@hobu.co"}
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: GIS",
]

dependencies = [
  "numpy >= 1.22"
]

version="1.6.5"

[project.optional-dependencies]
test = [ ]

[tool.setuptools]
package-dir = {"" =  "src"}
zip-safe = false

[project.urls]
homepage = "https://pdal.io"
documentation = "https://pdal.io"
repository = "https://github.com/PDAL/python-plugins"
changelog = "https://github.com/PDAL/python-plugins/blob/main/README.rst"

[build-system]
requires = ["scikit-build-core", "numpy",  "pybind11[global]"]
build-backend = "scikit_build_core.build"

#[tool.scikit-build-core]
#wheel.py-api = "cp12"
#wheel.cmake = true


[tool.scikit-build]
build-dir = "build/{wheel_tag}/{build_type}"
sdist.exclude = [".github"]
sdist.cmake = true
cmake.build-type = "Release"
sdist.include = [
  "src",
  "CMakeLists.txt"
]
cmake.verbose = true
logging.level = "INFO"

#[tool.scikit-build.cmake.define]
#WITH_TESTS = "ON"
